--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ Flask-SQLAlchemy==3.1.1
 python-dotenv==1.1.1
 requests==2.32.3
 Pillow>=11.2.1
-openai==1.23.0
+openai>=1.23.0
 huggingface-hub==0.32.2
